src/main/java/wemeGrammarParser.java
// Generated from wemeGrammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class wemeGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		STRING=1, NUMBER=2, TRUE=3, FALSE=4, NULL=5, AND=6, OR=7, NOT=8, IF=9, 
		ELSE=10, FOR=11, WHILE=12, FUNCTION=13, CLASS=14, PRINT=15, RETURN=16, 
		SUPER=17, THIS=18, VAR=19, COLON=20, SEMICOLON=21, COMMA=22, DOT=23, MINUS=24, 
		PLUS=25, DIV=26, MUL=27, EQUAL=28, DOUBLE_EQUAL=29, NOT_EQUAL=30, GREATER=31, 
		GREATER_EQUAL=32, LESS=33, LESS_EQUAL=34, LBRACKET=35, RBRACKET=36, LBRACE=37, 
		RBRACE=38, INHERIT=39, WS=40, IDENT=41;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_varDeclaration = 2, RULE_funDeclaration = 3, 
		RULE_classDeclaration = 4, RULE_function = 5, RULE_parameters = 6, RULE_statement = 7, 
		RULE_ifSt = 8, RULE_ifElseSt = 9, RULE_whileSt = 10, RULE_forSt = 11, 
		RULE_printSt = 12, RULE_returnSt = 13, RULE_block = 14, RULE_expression = 15, 
		RULE_assignment = 16, RULE_call = 17, RULE_primary = 18, RULE_group = 19, 
		RULE_arguments = 20, RULE_orOperation = 21, RULE_andOperation = 22, RULE_eqOperation = 23, 
		RULE_compOperation = 24, RULE_sumOperation = 25, RULE_mulOperation = 26, 
		RULE_unary = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaration", "varDeclaration", "funDeclaration", "classDeclaration", 
			"function", "parameters", "statement", "ifSt", "ifElseSt", "whileSt", 
			"forSt", "printSt", "returnSt", "block", "expression", "assignment", 
			"call", "primary", "group", "arguments", "orOperation", "andOperation", 
			"eqOperation", "compOperation", "sumOperation", "mulOperation", "unary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'true'", "'false'", "'null'", "'and'", "'or'", "'!'", 
			"'if'", "'else'", "'for'", "'while'", "'fun'", "'class'", "'print'", 
			"'return'", "'super'", "'this'", "'var'", "':'", "';'", "','", "'.'", 
			"'-'", "'+'", "'/'", "'*'", "'='", "'=='", "'!='", "'>'", "'>='", "'<'", 
			"'<='", "'('", "')'", "'{'", "'}'", "'inherit'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "STRING", "NUMBER", "TRUE", "FALSE", "NULL", "AND", "OR", "NOT", 
			"IF", "ELSE", "FOR", "WHILE", "FUNCTION", "CLASS", "PRINT", "RETURN", 
			"SUPER", "THIS", "VAR", "COLON", "SEMICOLON", "COMMA", "DOT", "MINUS", 
			"PLUS", "DIV", "MUL", "EQUAL", "DOUBLE_EQUAL", "NOT_EQUAL", "GREATER", 
			"GREATER_EQUAL", "LESS", "LESS_EQUAL", "LBRACKET", "RBRACKET", "LBRACE", 
			"RBRACE", "INHERIT", "WS", "IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "wemeGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public wemeGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(wemeGrammarParser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << NUMBER) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << NOT) | (1L << IF) | (1L << FOR) | (1L << WHILE) | (1L << FUNCTION) | (1L << CLASS) | (1L << PRINT) | (1L << RETURN) | (1L << SUPER) | (1L << THIS) | (1L << VAR) | (1L << MINUS) | (1L << LBRACKET) | (1L << LBRACE) | (1L << IDENT))) != 0)) {
				{
				{
				setState(56);
				declaration();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public FunDeclarationContext funDeclaration() {
			return getRuleContext(FunDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
			case NUMBER:
			case TRUE:
			case FALSE:
			case NULL:
			case NOT:
			case IF:
			case FOR:
			case WHILE:
			case PRINT:
			case RETURN:
			case SUPER:
			case THIS:
			case MINUS:
			case LBRACKET:
			case LBRACE:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				statement();
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				varDeclaration();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				funDeclaration();
				}
				break;
			case CLASS:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				classDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(wemeGrammarParser.VAR, 0); }
		public TerminalNode IDENT() { return getToken(wemeGrammarParser.IDENT, 0); }
		public TerminalNode SEMICOLON() { return getToken(wemeGrammarParser.SEMICOLON, 0); }
		public TerminalNode EQUAL() { return getToken(wemeGrammarParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitVarDeclaration(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(VAR);
			setState(71);
			match(IDENT);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(72);
				match(EQUAL);
				setState(73);
				expression();
				}
			}

			setState(76);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(wemeGrammarParser.FUNCTION, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterFunDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitFunDeclaration(this);
		}
	}

	public final FunDeclarationContext funDeclaration() throws RecognitionException {
		FunDeclarationContext _localctx = new FunDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(FUNCTION);
			setState(79);
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(wemeGrammarParser.CLASS, 0); }
		public List<TerminalNode> IDENT() { return getTokens(wemeGrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(wemeGrammarParser.IDENT, i);
		}
		public TerminalNode LBRACE() { return getToken(wemeGrammarParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(wemeGrammarParser.RBRACE, 0); }
		public TerminalNode INHERIT() { return getToken(wemeGrammarParser.INHERIT, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitClassDeclaration(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(CLASS);
			setState(82);
			match(IDENT);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERIT) {
				{
				setState(83);
				match(INHERIT);
				setState(84);
				match(IDENT);
				}
			}

			setState(87);
			match(LBRACE);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(88);
				function();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(wemeGrammarParser.IDENT, 0); }
		public TerminalNode LBRACKET() { return getToken(wemeGrammarParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(wemeGrammarParser.RBRACKET, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(IDENT);
				setState(97);
				match(LBRACKET);
				setState(98);
				match(RBRACKET);
				setState(99);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(IDENT);
				setState(101);
				match(LBRACKET);
				setState(102);
				parameters();
				setState(103);
				match(RBRACKET);
				setState(104);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(wemeGrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(wemeGrammarParser.IDENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(wemeGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(wemeGrammarParser.COMMA, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(IDENT);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(109);
				match(COMMA);
				setState(110);
				match(IDENT);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(wemeGrammarParser.SEMICOLON, 0); }
		public IfStContext ifSt() {
			return getRuleContext(IfStContext.class,0);
		}
		public IfElseStContext ifElseSt() {
			return getRuleContext(IfElseStContext.class,0);
		}
		public WhileStContext whileSt() {
			return getRuleContext(WhileStContext.class,0);
		}
		public ForStContext forSt() {
			return getRuleContext(ForStContext.class,0);
		}
		public PrintStContext printSt() {
			return getRuleContext(PrintStContext.class,0);
		}
		public ReturnStContext returnSt() {
			return getRuleContext(ReturnStContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(126);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				expression();
				setState(117);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				ifSt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				ifElseSt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				whileSt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122);
				forSt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(123);
				printSt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(124);
				returnSt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(125);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(wemeGrammarParser.IF, 0); }
		public TerminalNode LBRACKET() { return getToken(wemeGrammarParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(wemeGrammarParser.RBRACKET, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public IfStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterIfSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitIfSt(this);
		}
	}

	public final IfStContext ifSt() throws RecognitionException {
		IfStContext _localctx = new IfStContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifSt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(IF);
			setState(129);
			match(LBRACKET);
			setState(130);
			expression();
			setState(131);
			match(RBRACKET);
			setState(132);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfElseStContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(wemeGrammarParser.IF, 0); }
		public TerminalNode LBRACKET() { return getToken(wemeGrammarParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(wemeGrammarParser.RBRACKET, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(wemeGrammarParser.ELSE, 0); }
		public IfElseStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElseSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterIfElseSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitIfElseSt(this);
		}
	}

	public final IfElseStContext ifElseSt() throws RecognitionException {
		IfElseStContext _localctx = new IfElseStContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifElseSt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IF);
			setState(135);
			match(LBRACKET);
			setState(136);
			expression();
			setState(137);
			match(RBRACKET);
			setState(138);
			statement();
			setState(139);
			match(ELSE);
			setState(140);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(wemeGrammarParser.WHILE, 0); }
		public TerminalNode LBRACKET() { return getToken(wemeGrammarParser.LBRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(wemeGrammarParser.RBRACKET, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterWhileSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitWhileSt(this);
		}
	}

	public final WhileStContext whileSt() throws RecognitionException {
		WhileStContext _localctx = new WhileStContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileSt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(WHILE);
			setState(143);
			match(LBRACKET);
			setState(144);
			expression();
			setState(145);
			match(RBRACKET);
			setState(146);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(wemeGrammarParser.FOR, 0); }
		public TerminalNode LBRACKET() { return getToken(wemeGrammarParser.LBRACKET, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(wemeGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(wemeGrammarParser.SEMICOLON, i);
		}
		public TerminalNode RBRACKET() { return getToken(wemeGrammarParser.RBRACKET, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ForStContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forSt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).enterForSt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof wemeGrammarListener ) ((wemeGrammarListener)listener).exitForSt(this);
		}
	}

	public final ForStContext forSt() throws RecognitionException {
		ForStContext _localctx = new ForStContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_forSt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(FOR);
			setState(149);
			match(LBRACKET);
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				{
				setState(150);
				varDeclaration();
				}
				break;
			case STRING:
			case NUMBER:
			case TRUE:
			case FALSE:
			case NULL:
			case NOT:
			case SUPER:
			case THIS:
			case MINUS:
			case LBRACKET:
			case IDENT:
				{
				setState(151);
				expression();
				setState(152);
				match(SEMICOLON);
				}
				break;
			case SEMICOLON:
				{
				setState(154);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << NUMBER) | (1L << TRUE) | (1L << FALSE) | (1L << NULL) | (1L << NOT) | (1L << SUPER) | (1L << THIS) | (1L << MINUS) | (1L << LBRACKET) | (1L << IDENT))) != 0)) {
				{
				setState(157);
				expression();
				}
			}
